@@ -1,10 +1,14 @@
 #ifndef BOSS_MOD_CHANNELCREATOR_MANAGER_HPP
 #define BOSS_MOD_CHANNELCREATOR_MANAGER_HPP
 
+#include"Boss/Mod/ChannelCreator/Reprioritizer.hpp"
 #include"Boss/ModG/ReqResp.hpp"
 #include"Boss/Msg/RequestDowser.hpp"
 #include"Boss/Msg/ResponseDowser.hpp"
 #include"Ln/NodeId.hpp"
+#include<memory>
+#include<utility>
+#include<vector>
 
 namespace Boss { namespace Mod { namespace ChannelCandidateInvestigator {
 	class Main;
@@ -15,6 +19,8 @@ namespace Boss { namespace Mod { namespace ChannelCreator {
 namespace Boss { namespace Mod { class Rpc; }}
 namespace Ev { template<typename a> class Io; }
 namespace Ln { class Amount; }
+namespace Ln { class NodeId; }
+namespace Net { class IPAddrOrOnion; }
 namespace S { class Bus; }
 
 namespace Boss { namespace Mod { namespace ChannelCreator {
@@ -35,8 +41,17 @@ private:
 
 	ModG::ReqResp<Msg::RequestDowser, Msg::ResponseDowser> dowser;
 
+	std::unique_ptr<Boss::Mod::ChannelCreator::Reprioritizer> reprioritizer;
+
 	void start();
 	Ev::Io<void> on_request_channel_creation(Ln::Amount);
+
+	/* Needed by reprioritizer.  */
+	Ev::Io<std::unique_ptr<Net::IPAddrOrOnion>> get_node_addr(Ln::NodeId);
+	Ev::Io<std::vector<Ln::NodeId>> get_peers();
+	/* Perform reprioritization and log it.  */
+	Ev::Io<std::vector<std::pair<Ln::NodeId, Ln::NodeId>>>
+	reprioritize(std::vector<std::pair<Ln::NodeId, Ln::NodeId>>);
 
 public:
 	Manager() =delete;
