@@ -1,3 +1,4 @@
+- Avoid making multiple channels to nodes with the same IP bin.
 - Fix MacOS compile.
 - Use `dig -v` to check for `dig` install, instead of `dig localhost`, as the latter may trigger a "real" lookup that will inevitably fail.
 
